# invoicepipe

./: .gitignore  README.md  progress.md
docs/: git-github-cheat-sheet.md  instructor-integration-guide.md  litellm-integration-guide.md  managing-env-files.md  setup-fastapi-project.md  spec-invoice.md  using-quantalogic-pyzerox.md
docs/preparation-work/: step-by-step-assignment.md
projects/invoicepipes/: .env.example  README.md  pyproject.toml
projects/invoicepipes/src/invoice_extractor/: __init__.py  cli.py  config.py  models.py  processor.py  validators.py
projects/invoicepipes/tests/: conftest.py  test_cli.py  test_validators.py
projects/project-template/: README.md  cookiecutter.json
projects/project-template/hooks/: post_gen_project.py  pre_gen_project.py
projects/project-template/{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.py  run_app.py
projects/project-template/{{cookiecutter.project_slug}}/docs/: api.rst  architecture.rst  conf.py  contributing.rst  development-workflow.md  index.rst  quickstart.rst
projects/project-template/{{cookiecutter.project_slug}}/tests/: test_integration.py  test_tools.py
projects/project-template/{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  main.py
